Update Darakz Hub v5.1

--- a/Darakz Hub v5.1
+++ b/Darakz Hub v5.1
@@ -1,5 +1,5 @@
 -- This script is made by Darakz Hub
--- This not a stealer script
+-- This is not a stealer script
 -- This script 100% legit ✅
 
 
